# ChangeLog for app-arch/rpm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.162 2012/10/24 13:39:52 scarabeus Exp $

*rpm-4.10.1 (24 Oct 2012)

  24 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +rpm-4.10.1.ebuild,
  metadata.xml:
  Version bump. Add also lovely suse herd here.

  24 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> -rpm-4.9.1.3.ebuild:
  Punt 4.9.1 as 4.10.0 is stable everywhere.

  14 Oct 2012; Raúl Porcel <armin76@gentoo.org> rpm-4.10.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #428148

  11 Aug 2012; <swift@gentoo.org> rpm-4.9.1.3.ebuild, rpm-4.10.0.ebuild:
  Add USE=selinux optional dependency towards selinux-rpm policy module

  08 Aug 2012; Anthony G. Basile <blueness@gentoo.org> rpm-4.10.0.ebuild:
  Stable arm, bug #428148

  03 Aug 2012; Markos Chandras <hwoarang@gentoo.org> rpm-4.10.0.ebuild:
  Stable on amd64 wrt bug #428148

  01 Aug 2012; Anthony G. Basile <blueness@gentoo.org> rpm-4.10.0.ebuild:
  Stable ppc ppc64, bug #428148

  29 Jul 2012; Jeroen Roovers <jer@gentoo.org> rpm-4.10.0.ebuild:
  Stable for HPPA (bug #428148).

  26 Jul 2012; Johannes Huber <johu@gentoo.org> metadata.xml:
  Cleanup metadata.

  26 Jul 2012; Johannes Huber <johu@gentoo.org> rpm-4.10.0.ebuild:
  Stable for x86, wrt bug #428148

  26 Jul 2012; Tomáš Chvátal <scarabeus@gentoo.org> -rpm-4.4.6-r7.ebuild,
  -files/rpm-4.4.6-autotools.patch, -files/rpm-4.4.6-buffer-overflow.patch,
  -files/rpm-4.4.6-fix-cflags-stripping.patch,
  -files/rpm-4.4.6-neon-0.28.patch, -files/rpm-4.4.6-qa-fix-undefined.patch,
  -files/rpm-4.4.6-stupidness.patch, -files/rpm-4.4.6-with-sqlite.patch,
  -files/rpm-4.4.7-have-locale-h.patch,
  -files/rpm-4.4.7-qa-fix-undefined.patch,
  -files/rpm-4.4.7-qa-implicit-function-to-pointer.patch,
  -files/rpm-4.4.7-stupidness.patch, -rpm-4.9.1.2.ebuild, -rpm-5.1.6.ebuild,
  -rpm-5.3.5.ebuild, -files/remaining-5.3.5.txt:
  Remove rpm5 and overshadowed versions.