@@ -1,29 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+AUX rpm-4.10.2-autotools.patch 1320 SHA256 c491a15aad393b46df6f880d8e493073d81e173e95708dd70581ba1499bcbb63 SHA512 5cdf21c12a96f382927b9ffe58d2c31b8b3feeebf89c6fff83f824d1129e4d82553e01f7d0ee0719dc4ba0136d57bc168423604c54ed2ab397449c73f6b1150a WHIRLPOOL f2f3019e8199484ec92eefe5fe1d6ef5f81e0a99fd539ff8800e30e0f0420243c81607547400c0cdb3c85cfe6d640eb33e32cded4e71c36af8346561ea7fc1f6
 AUX rpm-4.8.1-autotools.patch 929 SHA256 2280de624d171399bb48dd4ae9144063ae4ab17f87e57313ba664a234a90e512 SHA512 35955ce9d84c4dc146d8bbf4d4e20d3594986e4e25ad604e8d830a9e2bfb41ca2848735ec808f6ffe2e9225e200352248b611f3b2304a485d1ae7847d8afd476 WHIRLPOOL 65d58110a3dec6a210f66a1c9c50034031f313bff9b52e8ecae399762131a749b2c143df2c04f55cec8302c968e8b9a4863e2c25f25bcff53e8517004c792058
 AUX rpm-4.8.1-db-path.patch 628 SHA256 791682c72dd3a24e5e8268bfa967412035aa135c7b8d4673541bed129b89a0f3 SHA512 12539bbeda99d261890d50304945c7f022681ca0a283c70f17a6b1f188e9e24e9ce05b71d541ed6d951f94576b5183c49c4db784d5016d075a859c1e4dcb9005 WHIRLPOOL 96260c3669e3e4521f58e720aa27f365c293d82c85fe26a8a271e069b00e7971231a08b19d390f1282eecbb80aa49ec58a67ca80adef8a2fa95ae410f04cd4d3
 AUX rpm-4.9.1.2-libdir.patch 1056 SHA256 e4beb68b13861ccedcaa0a90c49f42c6dd7a2d7799360798b21eec7ea689437c SHA512 505faa54ccf196891f1e2231c776f8eadf547bf2003a495c90a2e5e4c93e31aadae5bac70541d316643a8aca85a1b2a3dc6b0ae2601834534ccded06a4a5fabc WHIRLPOOL 2a72aa223728f18fe186686dfee3e137e52f91a8150d4ed364fee9b9152941a4b2df366958901e4bdb733acf1eca77f5662755373fa0928f4f782e0723197caa
 DIST rpm-4.10.0.tar.bz2 3530378 SHA256 0e2e237235b64c07ee4a4152e4eb77aad4eb559737eac9b6713c5e1bcabfe4a9 SHA512 413362243e214cc16227142c26223e1a1deed83f57fe3d80951825f8cd325d11a8038654512815e04044e18e7c6f185e3330d5f652939c77f395ae14190413cd WHIRLPOOL 84d29e9f91b3b581ff0da9f0ce31128599931cc45acd5fd6bb60b8cc13b873c3e1be4e8e4c374913165950734dc8f4cd657ccd407f83549e472288a928f3d691
-DIST rpm-4.10.1.tar.bz2 3541216 SHA256 5fbc381740c041048b9db9c591a98e4a83764c439a0031ba650ad2cd031e156e SHA512 c48a57e7780e04f9ddc707147d26bedd2d94340cfecae6c1923abe4897b265652fa61807448387e907f807502bfedba03b3fa519a22524eec9bdbbd77e09db93 WHIRLPOOL 7ef0e930970413c70abd6de4942482d1d24c368e47c5812aae7f17e3134768fb8bcea2ed0dacc26bb02a851dddec287ebd837fa842e1b3bf44afa0e30ee43261
+DIST rpm-4.10.2.tar.bz2 3545536 SHA256 e9278a2b40f08bae5a9592b9b42f11f88b2e880cc34e57113d53461ed7de6e7b SHA512 7e290e0c0a993a96d575c8c962250f0eac12e11cd678d2f46cb23fbdb1e8dc1b2d63dc4dfa3efe7fa8917d34598a279eaf845331b311f64d02bcc4e93faae266 WHIRLPOOL bdf781030a5760d99950cb7162d2780675b00fe41ecb51b2d9ba22466ce150499489c25fc0a234143403d4d244351afa81828e20fe57bb67cdeaff5f712fbc13
 EBUILD rpm-4.10.0.ebuild 2694 SHA256 957abd23b6e2d1531918c47ed1cbab9f5857b1348c62c2261500a7dc4b1eeac3 SHA512 c43b43d1d2f8b3a66844ed2ea1d84885a11b1357d3b3b90d4c378c8f5ea443e95c4e996393e9c560f9b1ce091c81d9fbc833b815bb1a48573d2687e855bfa9dc WHIRLPOOL 6d525bb1e5eb2b2c7137930254ba9e52ecb831a820e37a82b62f8ee071db1a2a77c88812631acc1010a5e2ffa225c559cae0425d697e334ec400ff2b77fceffa
-EBUILD rpm-4.10.1.ebuild 2707 SHA256 980a2d8a28457f10bae0b44afb93cbe29eae62db4f698baa19cb622d9951c5a1 SHA512 052af4046df98d121f872e40706e60fe50fc7519de51a8120d6db2f285343f1e34375c5375d0d43805d4e2d7903748d688497d5f2578ab63b7b4381db0d715cc WHIRLPOOL 6a543b0898fc9934c541013013d3b82696ac8dec95f651c88d80de6285f1aa757a194d1bbeac60eba9bc202d00781db41644f2bf81e52236affc19076c9ee954
-MISC ChangeLog 25092 SHA256 53610fc2d3e0f699db161c7472a62ed24b3e33755b79f5b589804e4b138a8c22 SHA512 3eb2caa04f8bc0aaa7b8987aec030983d11df6f22781297c4ee2c0db0cca5694b2c9044c5c48ee9a8e4a4f329b7de19d4aa5889e19b0bfc292be4cd76b1c7d22 WHIRLPOOL cac80d2c2b1b7cb0905afeedbdf05d81e6b5b07b6f9c6fc7794e32376151ff33baa5082a07269143f711d0d8a594f2691a2538aff5ecde1a0dd083aa26ac8323
+EBUILD rpm-4.10.2.ebuild 2696 SHA256 7b8e640592175c7db992852a4fa3e0f7681fd01a4a5f4011918023b16926d088 SHA512 1548721b2177a1f3e33e672b06ed67b6f2504e2ab5ebd53fe4933dc7dc8449a4e1c41ef23bae46ba17b72f2239d0844f25beef96129535f737be4c45685f78e6 WHIRLPOOL 6e8edade57aefb74707c7704e3e81d4bd6d93dd75bb18d8ba78b4e1c5f0dba96cb9c09f9a38a6bca7d33fabd86281aa43089fcca5b8d43c70a67d8a9d879515a
+MISC ChangeLog 25419 SHA256 17ddd567c41b4cedf9dcdcaef1f91ba9419c90d6740bf38cd9a70b6b67fa34e2 SHA512 32db950fe1a61dfafaa8b5c81b0813a4352fef670de7c2869e07121415fd7854580e14c8df358e06eee7bef497f4d4bc58ea04c2563db5a5210ef2821b8508e2 WHIRLPOOL 046b2d0e18c7dc92772a4458ab90d881678ecc72b6bb5db3f9a68a5f76f7bf1de8b3de93b2a32227ee7b684854edaef07874066d0301b6db59c5ef29b46b4549
 MISC metadata.xml 258 SHA256 d18cd3c79f172a08970999a154c3ae331f1e6eabe37e677a4491e6ccf5122ab2 SHA512 a35165b524655cb15d343890439b14c3f5eaa998825338a5adc4cff8edad391869c31bc33b4f9bf7bb03a99653684c3f4eb5897b314c0ca1e89defba3f4b9dcf WHIRLPOOL c7d2a308b3d592fc50542eb844e302f214ee6b738b4853332e0a2c034c32cdefd646b5e6c50351e7735ac87f97bf5a5d211d121373a0ace625e564862a62f1ae
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQh+/sAAoJEOSiRoyO7jvo50UP/Rjty1x/dyOOw4ygUTVARUrh
-iM//d1LqCv1bKU4DeLSIaZvZbIVxgSCq0KQXyEcUo1UZdVh14YX1nVvwMgL8sJLG
-kwybkBhRCKgL4AfgywxlWuQq0dZzETjV7wP9T3Q1jyOUOUcPYoJ5R7NrogaECWB6
-VBS3zVSv5FyY99+lqBTvVEuSglFHRWZUscVzBz2i7pV9fIzGg8xQC7PMjSelCxIK
-55Qc05pa6FTrNV0XDyZBZe/5OOwkst5Vfj8touEaf66RaTyCVQFzOY6ZT7OYxEuK
-a5OPZmB+r0TsxOrgjGBYQEpn9calUbQpfJc/9BgE108Sh6nqUvZNLgpVC5kVgs35
-b8iF5EOD4gTuwO79sKLLm/QJRMq2QWxaaqMpsmtNluw5/CQ4NcFE5/ZQSdmVqKzS
-Sj+6uZlviSX0L7sgQ7oQeqhRob6iJYiB6CK5jxtLhBQhnb3+xRVG/sZ+CQ+7c0lT
-6iAXHiIgemY1mFw+OXegetbbxI9vH3I9FzHXr5TxtlV8zdIP86VLAzCPsE0+o4Ao
-u/CtAl6txE2ddz0473TlagQwiD2lmji91tN3KGXMF0NAGhWrvhbQ27uochLlPbEo
-zPLDdqY00zx/RWD6i/8CHWNLAri3Tf3vdRsnz6LKIzTOMSJIB+QRNi7ZHyCCa3eM
-PjeFOT+RrZ62pjWcIHwA
-=s77R
+iQIcBAEBCAAGBQJQ5/awAAoJEOSiRoyO7jvonYgP/iOQrM4RGBAqI25yRvC14nVK
+cQqCNGwuSenHD0DdPBNY2zqc6LKfh9V1cd/DpYx9rVVqFIRrW5bWE2dhsXoBZldU
+tmg9sQpv8l7oiirm30e2e/BgRJYxa38FKx5y4gfc8RgqbOObKhTROBBiYQsTsNgX
+vYe92y6TKE0mXcw/aTFWRW7pGR8m4eHkbuiF9F8OyI0yhEokrYOB2PFT+AaGZwfU
+fywbWa7qKi5dqeKxF6SPHN9bLN38ZbXJdnRx4/AHiEboYFuJ85Xnhs5ly3omCk+H
+Ahzy/Q0E+RzUG/wBVl7skhnzdfeZIT0bsL2ah8rWFm5NAAzHzo2+XE1BFn1y4m+J
+Z6jhd/mj451o70bTfZOHtp/tNAiMfZyXQ9XM4hJRI+itoWTBb67eScU59qUkIcxz
+OU8PvPp+e7uvkgYaVNk17CNWfbilLnGP6NJfjapIxE8OPsrePX9C8Ylu0UBahH5V
+NebLtcSURPpaBd2zXdFbuoelyYLhWcmlbi+YhflgOKf+h7xRR3bIjjeDWA2LqMwS
+jAyUYC7mu3g3Eap/nkDfKBY43aZAlZ3a4o/Dv9X2n30UCGeGGRyfWE3AFn40505a
+vAI9yArjpXoJW7iF4D+A/q+0Jx8LPv9sbDzNksDETjrAXsP4Q495yFECjSLELhU/
+TA1nnZDmkimN0eymUNDz
+=4Ww1
 -----END PGP SIGNATURE-----
