@@ -1,6 +1,15 @@
 # ChangeLog for app-arch/rpm
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.162 2012/10/24 13:39:52 scarabeus Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.164 2013/01/05 09:47:24 scarabeus Exp $
+
+  05 Jan 2013; Tomáš Chvátal <scarabeus@gentoo.org> rpm-4.10.2.ebuild:
+  Stabilise on amd64 x86 ppc and ppc64 wrt bug#450286.
+
+*rpm-4.10.2 (04 Jan 2013)
+
+  04 Jan 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
+  -rpm-4.10.1.ebuild, +rpm-4.10.2.ebuild, +files/rpm-4.10.2-autotools.patch:
+  Version bump and fix #450286
 
 *rpm-4.10.1 (24 Oct 2012)
 
